--- a/app/src/main/res/layout/fragment_home_overview.xml
+++ b/app/src/main/res/layout/fragment_home_overview.xml
@@ -1,67 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_title_traveling_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/tv_title_traveling_home_margin_start"
-        android:layout_marginTop="@dimen/tv_title_traveling_home_margin_top"
-        android:fontFamily="@font/poppins_bold"
-        android:lineHeight="@dimen/tv_title_traveling_home_line_height"
-        android:text="@string/tv_title_traveling_home"
-        android:textColor="@color/black"
-        android:textSize="@dimen/tv_title_traveling_home_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/icon_search_city_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/icon_search_city_home_margin_top"
-        android:layout_marginEnd="@dimen/icon_search_city_home_margin_end"
-        android:src="@drawable/round_search_city"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edt_search_city_home"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/edt_search_city_home_margin_start"
-        android:layout_marginTop="@dimen/edt_search_city_home_margin_top"
-        android:layout_marginEnd="@dimen/edt_search_city_home_margin_end"
-        android:background="@android:color/transparent"
-        android:fontFamily="@font/poppins_medium"
-        android:hint="@string/edt_search_city_home_hint"
-        android:lineHeight="@dimen/edt_search_city_home_line_height"
-        android:paddingStart="@dimen/edt_search_city_home_padding_start"
-        android:paddingTop="@dimen/edt_search_city_home_padding_top"
-        android:paddingBottom="@dimen/edt_search_city_home_padding_bottom"
-        android:textColor="@color/black"
-        android:textColorHint="@color/text_backpack_sign_up_to_log_in"
-        android:textSize="@dimen/edt_search_city_home_text_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_traveling_home"
-        tools:ignore="HardcodedText,RtlSymmetry,SpUsage,UnusedAttribute" />
+        android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_post_home"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/scroll_view_contain_rcv_home_margin_start"
-        android:layout_marginTop="@dimen/scroll_view_contain_rcv_home_margin_top"
-        android:layout_marginEnd="@dimen/scroll_view_contain_rcv_home_margin_end"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_search_city_home" />
+        <TextView
+            android:id="@+id/tv_title_traveling_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/tv_title_traveling_home_margin_start"
+            android:layout_marginTop="@dimen/tv_title_traveling_home_margin_top"
+            android:fontFamily="@font/poppins_bold"
+            android:lineHeight="@dimen/tv_title_traveling_home_line_height"
+            android:text="@string/tv_title_traveling_home"
+            android:textColor="@color/black"
+            android:textSize="@dimen/tv_title_traveling_home_size"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icon_search_city_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/icon_search_city_home_margin_top"
+            android:layout_marginEnd="@dimen/icon_search_city_home_margin_end"
+            android:src="@drawable/round_search_city"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_search_city_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/edt_search_city_home_margin_start"
+            android:layout_marginTop="@dimen/edt_search_city_home_margin_top"
+            android:layout_marginEnd="@dimen/edt_search_city_home_margin_end"
+            android:background="@android:color/transparent"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="@string/edt_search_city_home_hint"
+            android:lineHeight="@dimen/edt_search_city_home_line_height"
+            android:paddingStart="@dimen/edt_search_city_home_padding_start"
+            android:paddingTop="@dimen/edt_search_city_home_padding_top"
+            android:paddingBottom="@dimen/edt_search_city_home_padding_bottom"
+            android:textColor="@color/black"
+            android:textColorHint="@color/text_backpack_sign_up_to_log_in"
+            android:textSize="@dimen/edt_search_city_home_text_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_title_traveling_home"
+            tools:ignore="HardcodedText,RtlSymmetry,SpUsage,UnusedAttribute" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_post_home"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/scroll_view_contain_rcv_home_margin_start"
+            android:layout_marginTop="@dimen/scroll_view_contain_rcv_home_margin_top"
+            android:layout_marginEnd="@dimen/scroll_view_contain_rcv_home_margin_end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_search_city_home" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
