--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,167 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
-    <include
-        android:id="@+id/round_back_sign_up"
-        layout="@layout/round_back_backpack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/btn_sign_up_to_log_in_backpack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/round_back_text_backpack_margin_top"
-        android:layout_marginEnd="@dimen/text_backpack_sign_up_margin_end"
-        android:fontFamily="@font/poppins_bold"
-        android:lineHeight="@dimen/round_back_text_backpack_line_height"
-        android:text="@string/text_sign_up_backpack"
-        android:textColor="@color/text_backpack_sign_up_to_log_in"
-        android:textSize="@dimen/round_back_text_size_backpack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edt_name_backpack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:fontFamily="@font/poppins_medium"
-        android:hint="@string/hint_edit_text_name"
-        android:lineHeight="@dimen/line_height_text_backpack_account"
-        android:textColor="@color/round_back_text_backpack"
-        android:textColorHint="@color/round_back_text_backpack"
-        android:textSize="@dimen/text_size_backpack_edt_account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/round_back_sign_up"
-        app:layout_constraintVertical_bias="0.214"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edt_email_backpack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:fontFamily="@font/poppins_medium"
-        android:hint="@string/hint_edit_text_email"
-        android:lineHeight="@dimen/line_height_text_backpack_account"
-        android:textColor="@color/round_back_text_backpack"
-        android:textColorHint="@color/round_back_text_backpack"
-        android:textSize="@dimen/text_size_backpack_edt_account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_name_backpack"
-        app:layout_constraintVertical_bias="0.077"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/edt_email_backpack"
-        android:textColor="@color/text_waring"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/tv_waring_sign_up_margin_start"
-        android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:id="@+id/tv_waring_sign_up_email"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edt_password_backpack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:fontFamily="@font/poppins_medium"
-        android:hint="@string/hint_edit_text_password"
-        android:inputType="textPassword"
-        android:lineHeight="@dimen/line_height_text_backpack_account"
-        android:textColor="@color/round_back_text_backpack"
-        android:textColorHint="@color/round_back_text_backpack"
-        android:textSize="@dimen/text_size_backpack_edt_account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_email_backpack"
-        app:layout_constraintVertical_bias="0.077"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/edt_password_backpack"
-        android:textColor="@color/text_waring"
-        android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/tv_waring_sign_up_margin_start"
-        android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
-        android:id="@+id/tv_waring_sign_up_password"/>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/img_btn_hide_show_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:src="@drawable/show_password"
-        android:stateListAnimator="@null"
-        app:layout_constraintBottom_toBottomOf="@+id/edt_password_backpack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.890"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/edt_password_backpack"
-        app:layout_constraintVertical_bias="0.428" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btn_register_account_backpack_sign_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password_backpack"
-        app:layout_constraintVertical_bias="0.286">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_sign_up_backpack"
+        <include
+            android:id="@+id/round_back_sign_up"
+            layout="@layout/round_back_backpack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/backpack_splash_custom_button_log_in"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/btn_sign_up_to_log_in_backpack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/round_back_text_backpack_margin_top"
+            android:layout_marginEnd="@dimen/text_backpack_sign_up_margin_end"
             android:fontFamily="@font/poppins_bold"
-            android:lineHeight="@dimen/backpack_splash_text_button_line_height"
-            android:paddingStart="@dimen/splash_backpack_button_padding_start"
-            android:paddingTop="@dimen/text_button_next_backpack_sign_up_02_padding_top"
-            android:paddingEnd="@dimen/splash_backpack_button_padding_end"
-            android:paddingBottom="@dimen/text_button_next_backpack_sign_up_02_padding_bottom"
-            android:stateListAnimator="@null"
-            android:text="@string/backpack_splash_button_sign_up"
-            android:textAllCaps="false"
-            android:textColor="@color/background_button_sign_up_splash"
-            android:textSize="@dimen/backpack_splash_text_button_size"
+            android:lineHeight="@dimen/round_back_text_backpack_line_height"
+            android:text="@string/text_sign_up_backpack"
+            android:textColor="@color/text_backpack_sign_up_to_log_in"
+            android:textSize="@dimen/round_back_text_size_backpack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_name_backpack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="@string/hint_edit_text_name"
+            android:lineHeight="@dimen/line_height_text_backpack_account"
+            android:textColor="@color/round_back_text_backpack"
+            android:textColorHint="@color/round_back_text_backpack"
+            android:textSize="@dimen/text_size_backpack_edt_account"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="SpUsage,UnusedAttribute" />
+            app:layout_constraintTop_toBottomOf="@id/round_back_sign_up"
+            app:layout_constraintVertical_bias="0.214"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_email_backpack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="@string/hint_edit_text_email"
+            android:lineHeight="@dimen/line_height_text_backpack_account"
+            android:textColor="@color/round_back_text_backpack"
+            android:textColorHint="@color/round_back_text_backpack"
+            android:textSize="@dimen/text_size_backpack_edt_account"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_name_backpack"
+            app:layout_constraintVertical_bias="0.077"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_waring_sign_up_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/tv_waring_sign_up_margin_start"
+            android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:textColor="@color/text_waring"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_email_backpack" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edt_password_backpack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="@string/hint_edit_text_password"
+            android:inputType="textPassword"
+            android:lineHeight="@dimen/line_height_text_backpack_account"
+            android:textColor="@color/round_back_text_backpack"
+            android:textColorHint="@color/round_back_text_backpack"
+            android:textSize="@dimen/text_size_backpack_edt_account"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_email_backpack"
+            app:layout_constraintVertical_bias="0.077"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_waring_sign_up_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/tv_waring_sign_up_margin_start"
+            android:layout_marginEnd="@dimen/edt_sign_up_backpack_margin_start_end"
+            android:textColor="@color/text_waring"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_password_backpack" />
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/img_btn_hide_show_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:src="@drawable/show_password"
+            android:stateListAnimator="@null"
+            app:layout_constraintBottom_toBottomOf="@+id/edt_password_backpack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.890"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/edt_password_backpack"
+            app:layout_constraintVertical_bias="0.428" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/btn_register_account_backpack_sign_up"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_password_backpack"
+            app:layout_constraintVertical_bias="0.286">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_sign_up_backpack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/backpack_splash_custom_button_log_in"
+                android:fontFamily="@font/poppins_bold"
+                android:lineHeight="@dimen/backpack_splash_text_button_line_height"
+                android:paddingStart="@dimen/splash_backpack_button_padding_start"
+                android:paddingTop="@dimen/text_button_next_backpack_sign_up_02_padding_top"
+                android:paddingEnd="@dimen/splash_backpack_button_padding_end"
+                android:paddingBottom="@dimen/text_button_next_backpack_sign_up_02_padding_bottom"
+                android:stateListAnimator="@null"
+                android:text="@string/backpack_splash_button_sign_up"
+                android:textAllCaps="false"
+                android:textColor="@color/background_button_sign_up_splash"
+                android:textSize="@dimen/backpack_splash_text_button_size"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="SpUsage,UnusedAttribute" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
