--- a/app/src/main/res/layout/item_member_chat.xml
+++ b/app/src/main/res/layout/item_member_chat.xml
@@ -1,79 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/item_member_chat_margin_top"
-    android:layout_marginBottom="@dimen/item_member_chat_margin_bottom"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_marginBottom="@dimen/item_member_chat_margin_bottom">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/avatar_user_item_rcv_member_chat"
-        android:layout_width="@dimen/avatar_item_rcv_member_chat_width"
-        android:layout_height="@dimen/avatar_item_rcv_member_chat_height"
-        android:src="@drawable/avatar_posts_home"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/name_user_item_rcv_member_chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/name_user_item_rcv_member_chat_margin_start"
-        android:layout_marginTop="@dimen/name_user_item_rcv_member_chat_margin_top"
-        android:fontFamily="@font/poppins_bold"
-        android:lineHeight="@dimen/name_user_item_rcv_member_chat_line_height"
-        android:text="@string/name_user_item_rcv_member_chat"
-        android:textColor="@color/black"
-        android:textSize="@dimen/name_user_item_rcv_member_chat_size"
-        app:layout_constraintStart_toEndOf="@id/avatar_user_item_rcv_member_chat"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
-
-    <HorizontalScrollView
-        android:id="@+id/scroll_view_contains_message_item_rcv_member_chat"
-        android:layout_width="@dimen/scroll_view_contains_message_item_rcv_member_chat_width"
-        android:layout_height="@dimen/scroll_view_contains_message_item_rcv_member_chat_height"
-        android:layout_marginStart="@dimen/scroll_view_contains_message_item_rcv_member_chat_margin_start"
-        android:layout_marginTop="@dimen/scroll_view_contains_message_item_rcv_member_chat_margin_top"
-        android:scrollbarThumbHorizontal="@android:color/transparent"
-        app:layout_constraintStart_toEndOf="@id/avatar_user_item_rcv_member_chat"
-        app:layout_constraintTop_toBottomOf="@id/name_user_item_rcv_member_chat">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar_user_item_rcv_member_chat"
+            android:layout_width="@dimen/avatar_item_rcv_member_chat_width"
+            android:layout_height="@dimen/avatar_item_rcv_member_chat_height"
+            android:src="@drawable/avatar_posts_home"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/message_user_item_rcv_member_chat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/poppins_medium"
-            android:lineHeight="@dimen/message_user_item_rcv_member_chat_line_height"
-            android:text="@string/message_user_item_rcv_member_chat"
+            android:id="@+id/name_user_item_rcv_member_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/name_user_item_rcv_member_chat_margin_start"
+            android:layout_marginTop="@dimen/name_user_item_rcv_member_chat_margin_top"
+            android:fontFamily="@font/poppins_bold"
+            android:lineHeight="@dimen/name_user_item_rcv_member_chat_line_height"
+            android:text="@string/name_user_item_rcv_member_chat"
             android:textColor="@color/black"
-            android:textSize="@dimen/message_user_item_rcv_member_chat_size"
-            tools:ignore="HardcodedText,ScrollViewSize,SpUsage,UnusedAttribute" />
+            android:textSize="@dimen/name_user_item_rcv_member_chat_size"
+            app:layout_constraintStart_toEndOf="@id/avatar_user_item_rcv_member_chat"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
 
-    </HorizontalScrollView>
+        <HorizontalScrollView
+            android:id="@+id/scroll_view_contains_message_item_rcv_member_chat"
+            android:layout_width="@dimen/scroll_view_contains_message_item_rcv_member_chat_width"
+            android:layout_height="@dimen/scroll_view_contains_message_item_rcv_member_chat_height"
+            android:layout_marginStart="@dimen/scroll_view_contains_message_item_rcv_member_chat_margin_start"
+            android:layout_marginTop="@dimen/scroll_view_contains_message_item_rcv_member_chat_margin_top"
+            android:scrollbarThumbHorizontal="@android:color/transparent"
+            app:layout_constraintStart_toEndOf="@id/avatar_user_item_rcv_member_chat"
+            app:layout_constraintTop_toBottomOf="@id/name_user_item_rcv_member_chat">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/time_user_send_message_item_rcv_member_chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/time_user_send_message_item_rcv_member_chat_margin_top"
-        android:fontFamily="@font/poppins_medium"
-        android:lineHeight="@dimen/time_user_send_message_item_rcv_member_chat_line_height"
-        android:text="@string/time_user_send_message_item_rcv_member_chat"
-        android:textColor="@color/text_backpack_sign_up_to_log_in"
-        android:textSize="@dimen/time_user_send_message_item_rcv_member_chat_size"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/message_user_item_rcv_member_chat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/poppins_medium"
+                android:lineHeight="@dimen/message_user_item_rcv_member_chat_line_height"
+                android:text="@string/message_user_item_rcv_member_chat"
+                android:textColor="@color/black"
+                android:textSize="@dimen/message_user_item_rcv_member_chat_size"
+                tools:ignore="HardcodedText,ScrollViewSize,SpUsage,UnusedAttribute" />
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/user_online_item_rcv_member_chat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/user_online_item_rcv_member_chat_margin_top"
-        android:src="@drawable/online_chat"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/time_user_send_message_item_rcv_member_chat" />
+        </HorizontalScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/time_user_send_message_item_rcv_member_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/time_user_send_message_item_rcv_member_chat_margin_top"
+            android:fontFamily="@font/poppins_medium"
+            android:lineHeight="@dimen/time_user_send_message_item_rcv_member_chat_line_height"
+            android:text="@string/time_user_send_message_item_rcv_member_chat"
+            android:textColor="@color/text_backpack_sign_up_to_log_in"
+            android:textSize="@dimen/time_user_send_message_item_rcv_member_chat_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/user_online_item_rcv_member_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/user_online_item_rcv_member_chat_margin_top"
+            android:src="@drawable/online_chat"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/time_user_send_message_item_rcv_member_chat" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
