--- a/app/src/main/res/layout/item_rcv_travel_photo_profile.xml
+++ b/app/src/main/res/layout/item_rcv_travel_photo_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -7,49 +7,55 @@
     android:paddingStart="@dimen/item_custom_rcv_travel_photo_profile_padding_end_and_start"
     android:paddingEnd="@dimen/item_custom_rcv_travel_photo_profile_padding_end_and_start">
 
-    <androidx.cardview.widget.CardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/card_view_custom_rcv_travel_photo_profile"
-        app:cardElevation="@dimen/card_view_shadow_rcv_travel_photo_profile"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/card_view_custom_rcv_travel_photo_profile"
+            app:cardElevation="@dimen/card_view_shadow_rcv_travel_photo_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image_item_travel_photo_rcv"
-                android:layout_width="@dimen/image_item_travel_photo_rcv_width"
-                android:layout_height="@dimen/image_item_travel_photo_rcv_height"
-                android:scaleType="fitXY"
-                android:src="@drawable/seth_doyle_151914_unsplash"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_item_country_rcv"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/tv_item_country_rcv_margin_start"
-                android:layout_marginBottom="@dimen/tv_item_country_rcv_margin_bottom"
-                android:fontFamily="@font/poppins_bold"
-                android:lineHeight="@dimen/tv_item_country_rcv_line_height"
-                android:text="@string/item_name_country_rcv_travel_photo"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/tv_item_country_rcv_size"
-                app:layout_constraintBottom_toBottomOf="@id/image_item_travel_photo_rcv"
-                app:layout_constraintStart_toStartOf="@id/image_item_travel_photo_rcv"
-                tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
+                android:layout_height="wrap_content">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image_item_travel_photo_rcv"
+                    android:layout_width="@dimen/image_item_travel_photo_rcv_width"
+                    android:layout_height="@dimen/image_item_travel_photo_rcv_height"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/seth_doyle_151914_unsplash"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.cardview.widget.CardView>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_item_country_rcv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/tv_item_country_rcv_margin_start"
+                    android:layout_marginBottom="@dimen/tv_item_country_rcv_margin_bottom"
+                    android:fontFamily="@font/poppins_bold"
+                    android:lineHeight="@dimen/tv_item_country_rcv_line_height"
+                    android:text="@string/item_name_country_rcv_travel_photo"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/tv_item_country_rcv_size"
+                    app:layout_constraintBottom_toBottomOf="@id/image_item_travel_photo_rcv"
+                    app:layout_constraintStart_toStartOf="@id/image_item_travel_photo_rcv"
+                    tools:ignore="HardcodedText,SpUsage,UnusedAttribute" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
