--- a/app/src/main/res/layout/round_back_backpack.xml
+++ b/app/src/main/res/layout/round_back_backpack.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_contains_round_back"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/image_round_back_backpack_login"
@@ -34,3 +38,5 @@
             tools:ignore="RtlHardcoded,SpUsage,UnusedAttribute" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+</RelativeLayout>
